# AprilNav

./: CMakeLists.txt  DoubleTerminal.sh  README.md  README.txt  input.txt  output.txt
AprilNav/: AprilNav.cpp  CMakeLists.txt  WaypointInput.cpp
AprilTags/: Input.h
Arduino/: AutonomousCode.txt
Calibration/: CalibrationOutput.cpp  CameraCalibration.cpp
Data/: 3-16-2018-9_32_1_AllTags.csv  3-16-2018-9_32_1_OptimizedData.csv  3-16-2018-9_36_56_AllTags.csv  3-16-2018-9_36_56_OptimizedData.csv  3-22-2018-15:34:24_AllTags.csv  3-22-2018-15:34:24_OptimizedData.csv  3-23-2018-12_3_41_AllTags.csv  3-23-2018-12_3_41_OptimizedData.csv  3-23-2018-16_44_2_OptimizedData.csv  3-8-2018-15_53_20_OptimizedData.csv  4-10-2018-13_14_37_AllTags.csv  4-10-2018-13_14_37_OptimizedData.csv  4-10-2018-13_15_10_AllTags.csv  4-10-2018-13_15_10_OptimizedData.csv  4-10-2018-13_17_39_AllTags.csv  4-10-2018-13_17_39_OptimizedData.csv  4-10-2018-13_18_44_AllTags.csv  4-10-2018-13_18_44_OptimizedData.csv  4-10-2018-13_19_17_AllTags.csv  4-10-2018-13_19_17_OptimizedData.csv  4-10-2018-13_23_42_AllTags.csv  4-10-2018-13_23_42_OptimizedData.csv  4-10-2018-13_25_35_AllTags.csv  4-10-2018-13_25_35_OptimizedData.csv  4-10-2018-13_27_3_AllTags.csv  4-10-2018-13_27_3_OptimizedData.csv  4-10-2018-13_28_57_AllTags.csv  4-10-2018-13_28_57_OptimizedData.csv  (+158 more)
StarTracker/: CMakeLists.txt  Coordinates.csv  Pointers.cpp  SerialTest.cpp  StarTracker.cpp  StarTracker_BACKUP_9080.cpp  StarTracker_BASE_9080.cpp  StarTracker_testtags.cpp  ThreadTest.cpp  apriltagscsv2.cpp
example/: CMakeLists.txt  SerialTest.cpp  StarTracker.cpp  VideoTest.cpp  apriltagscsv.cpp  apriltagscsv_test.cpp
pod-build/: Makefile  (+3 more)
(+21 files in other folders)
